# diet_skill

./: .gitignore  README.md
calculator_estimation_skill_msgs/: CMakeLists.txt  package.xml
calculator_estimation_skill_msgs/action/: CalculatorEstimationSkill.action
calculator_estimation_skill_msgs/msg/: CalculatorResult.msg
calculator_estimation_skill_server/: CMakeLists.txt  package.xml
calculator_estimation_skill_server/include/calculator_estimation_skill_server/: calculator_estimation_base.h  calculator_estimation_server.h  calculator_estimation_skill_server.h  sub_estimation.h  sum_estimation.h
calculator_estimation_skill_server/include/calculator_estimation_skill_server/common/: verbosity_levels.h
calculator_estimation_skill_server/launch/: run_calculator.launch
calculator_estimation_skill_server/src/: calculator_estimation_base.cpp  calculator_estimation_skill_server.cpp  calculator_estimation_skill_server_node.cpp  sub_estimation.cpp  sum_estimation.cpp
calculator_estimation_skill_server/src/common/: verbosity_levels.cpp
calculator_estimation_skill_server/yaml/: calculator_pipeline.yaml
diet_estimation_skill_msgs/: CMakeLists.txt  package.xml
diet_estimation_skill_msgs/action/: DietEstimationSkill.action
diet_estimation_skill_msgs/msg/: Candidate.msg
diet_estimation_skill_server/: CMakeLists.txt  README.md  package.xml
diet_estimation_skill_server/docs/: exercise.md
diet_estimation_skill_server/include/diet_estimation_skill_server/: diet_estimation_base.h  diet_estimation_skill_server.h
diet_estimation_skill_server/include/diet_estimation_skill_server/common/: std_vector_operations.h  tuple_operations.h  verbosity_levels.h
diet_estimation_skill_server/include/diet_estimation_skill_server/data/: diet_estimation_data_base.h  fiber_data.h  protein_data.h
diet_estimation_skill_server/include/diet_estimation_skill_server/heuristics/: fiber_selector.h  protein_selector.h
diet_estimation_skill_server/launch/: run.launch
diet_estimation_skill_server/src/: diet_estimation_base.cpp  diet_estimation_skill_server.cpp  diet_estimation_skill_server_node.cpp
diet_estimation_skill_server/src/common/: std_vector_operations.cpp  verbosity_levels.cpp
diet_estimation_skill_server/src/heuristics/: fiber_selector.cpp  protein_selector.cpp
diet_estimation_skill_server/yaml/: candidates.yaml  fulano_pipeline.yaml
