<?xml version="1.0"?>
<package format="2">
  <name>calculator_estimation_skill_msgs</name>
  <version>0.0.0</version>
  <description>The calculator_estimation_skill_msgs package</description>


  <maintainer email="artur@todo.todo">artur</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_exectime</exec_depend>


</package>
