<?xml version="1.0"?>
<package format="2">
  <name>diet_estimation_skill_server</name>
  <version>1.0.0</version>
  <description>The diet_estimation_skill_server package</description>
  <maintainer email="joao.p.souza@inesctec.pt">joao_pedro_souza</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>diet_estimation_skill_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>diet_estimation_skill_msgs</exec_depend>

</package>
